# alethic-kernel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/agents/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
alethic/: kernel.py
alethic/api/: app.py  models.py
docs/: api-reference.md  architecture.md  benchmark.md  deployment.md  http-api.md  workers.md
docs/superpowers/plans/: 2026-07-16-alethic-dev.md
examples/: demo.ipynb  demo.py  multi_episode.py
src/: __init__.py  adaptive_worker.py  kernel.py  migrations.py  orchestrator.py  permissions.py  session.py  sqlite_store.py  store_protocol.py  worker.py
src/alethic_kernel/: __init__.py  client.py  run.py  schema.py  sim_worker.py  store.py  validators.py
src/alethic_kernel/agents/: alethic_agent.py  json_glue.py  llm_agent.py  string_glue.py
src/alethic_kernel/api/: app.py  dependencies.py  routes.py  tracing.py
src/alethic_kernel/eval/: harness.py  metrics.py  report.py  task_loader.py
src/alethic_kernel/llm/: planner.py
src/alethic_kernel/tasks/: stripe_refund_clean.yaml  stripe_refund_combined.yaml  stripe_refund_conflict.yaml  stripe_refund_duplicate.yaml  stripe_refund_stale.yaml  stripe_refund_tool_failure.yaml
src/alethic_kernel/tools/: payment_tool.py  perturb.py  refund_tool.py
tests/: conftest.py  helpers.py  test_adaptive_worker.py  test_agent_integration.py  test_agent_llm_mock.py  test_api.py  test_atomicity.py  test_benchmark_invariants.py  test_cli.py  test_client.py  test_concurrency.py  test_coverage_gaps.py  test_e2e_pipeline.py  test_kernel.py  test_migrations.py  test_orchestrator.py  test_package_api.py  test_permissions.py  test_readme_assets.py  test_report.py  test_schema.py  test_session.py  test_sim_worker.py  test_sqlite_store.py  test_store.py  test_store_equivalence.py  test_stress.py  test_validators.py
