[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alethic-kernel"
version = "0.2.0"
description = "A governed cognition framework for AI systems"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Emil Uzelac"}]
readme = "README.md"
keywords = ["ai", "governance", "agents", "blackboard-kernel", "orchestration", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/alethicdev/alethic-kernel"
Documentation = "https://github.com/alethicdev/alethic-kernel#documentation"
Repository = "https://github.com/alethicdev/alethic-kernel.git"
"Bug Tracker" = "https://github.com/alethicdev/alethic-kernel/issues"
"Research Paper" = "https://doi.org/10.5281/zenodo.18691808"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy", "httpx"]
api = ["fastapi>=0.115", "uvicorn[standard]", "opentelemetry-api", "opentelemetry-sdk"]

[project.scripts]
alethic = "alethic_kernel.run:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["alethic_kernel*"]

[tool.setuptools.package-data]
"alethic_kernel" = ["tasks/*.yaml", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
mypy_path = "src"
