[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alethic-kernel"
version = "0.3.0"
description = "Alethic: a governed cognitive substrate for AI systems"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Emil Uzelac"}]
readme = "README.md"
keywords = ["ai", "governance", "agents", "blackboard-kernel", "orchestration", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/emiluzelac/alethic"
Documentation = "https://github.com/emiluzelac/alethic#documentation"
Repository = "https://github.com/emiluzelac/alethic.git"
"Bug Tracker" = "https://github.com/emiluzelac/alethic/issues"
"Research Paper" = "https://doi.org/10.5281/zenodo.18691808"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "mypy"]

[tool.setuptools]
packages = ["alethic"]
include-package-data = true

[tool.setuptools.package-dir]
alethic = "src"

[tool.setuptools.package-data]
alethic = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
